--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2368,7 +2368,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm Chuyên Môn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2422,7 +2422,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điểm Chuyên Môn +10: Tấn Công Gốc +8",
+        "vi":"Tấn Công Gốc +8",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2440,7 +2440,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điểm Chuyên Môn +15: Chuẩn Xác Kỹ Năng +3%",
+        "vi":"Chuẩn Xác Kỹ Năng +3%",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2458,7 +2458,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điểm Chuyên Môn +20: Chuẩn Xác Bạo Kích Kỹ Năng +4%",
+        "vi":"Chuẩn Xác Bạo Kích Kỹ Năng +4%",
         "ar":"",
         "it":"",
         "pl":"",
